# weight-trajectories

./: .gitignore  CLEANUP_PLAN.md  README.md  TRAJECTORY_COMPARISON_GUIDE.md  USAGE.md  WORK_SUMMARY.md  all_1.sh  all_1wd1e-3.sh  pyproject.toml  report.tex  wt.sh
ablation_study/: all.json
ablation_study/scripts/: README_plotting.md  plot_ablations.py
configs/: ablations_18.yaml  train_configs.yaml  visualization_suite_1.json  visualization_suite_1wd1e-3.json  visualization_suite_example.json
data/: connect4_10k_games_test.pt
data/samples/: connect4_10k_games_test.json  connect4_10k_games_test.pt
docs/: README.md  _sidebar.md  index.html  weight_trajectory_visualization.md
docs/manual/: README.md  getting_started.md
docs/reference/: README.md  architecture_diagrams.md  methods.md
docs/rfcs/: rfc-0001-composable-toolkit.md
docs/scientific/: README.md  (+9 more)
scripts/: _repro.py  analyze_fixed_point_evolution.py  analyze_gru_observability_results.py  analyze_trajectories_wizard.sh  analyze_weight_embeddings.py  compute_checkpoint_metrics.py  compute_cka_similarity.py  compute_hidden_mutual_info.py  export_model_onnx.py  extract_gru_dynamics.py  find_gru_fixed_points.py  generate_connect4_dataset.py  generate_report.py  generate_sequential_dataset.py  relativize_docs_links.py  run_all_ablation_visualizations.sh  run_cka_wizard.sh  run_embedding_wizard.sh  run_visualization_suite.py  train_all_18_ablations.sh  train_all_models.sh  visualize_trajectory_embedding.py  visualize_unified.py
src/: model.py  play_game.py  train.py  visualize_trajectories.py
(+77 files in other folders)
