[project]
name = "weight-trajectories"
version = "0.1.0"
description = "Training and analysis utilities for Connect-4 weight trajectories"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "phate>=1.0.10",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "plotly>=5.20",
    "p
]
